Move JS assets to assets/ and update embedding logic

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,12 @@
 !*.go
 !go.sum
 !go.mod
-!*.js
 
 !README.md
 !LICENSE
 
 # ...even if they are in subdirectories
 !*/
+
+# assets are an exception
+!assets/**
